samples/_failures_safe/1761600247_f53a96_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8bea5fa8.c: In function ‘bfs’:
./samples/SAFE/__tmp_8bea5fa8.c:160:12: error: expected declaration or statement at end of input
  160 |     struct Node* start_node = NULL;
      |            ^~~~
